--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -15,7 +15,9 @@
     </div>
   </nav>
   
-{{ content }}
+  <div class="container g-5 mt-5">
+    {{ content }}
+  </div>
   
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
