--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -19,22 +19,22 @@
     {{ content }}
   </div>
   
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+  <footer class="d-flex flex-wrap align-items-center py-3 my-4 border-top">
+    <div class="container justify-content-between">
+      <a href="/" class="text-muted text-decoration-none lh-1">
         © 2022 Trade Audit
       </a>
-    </div>
 
 <!--    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">-->
 <!--      Hi!-->
 <!--    </a>-->
 
-    <ul class="nav col-md-4"/>
+    <ul class="nav text-end"/>
       <li class="nav-item"><a href="/terms-of-use" class="nav-link px-2 text-muted">Terms of Use</a></li>
       <li class="nav-item"><a href="/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>
       <li class="nav-item"><a href="/cookie-policy" class="nav-link px-2 text-muted">Cookie Policy</a></li>
     </ul>
+  </div>
 <!--    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">-->
 <!--      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>-->
 <!--      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>-->
