--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -19,9 +19,9 @@
     {{ content }}
   </div>
   
-  <footer class="d-flex flex-wrap align-items-center py-3 my-4 border-top">
-    <div class="container justify-content-between">
-      <a href="/" class="text-muted text-decoration-none lh-1">
+  <footer class="py-2 bg-light border-top">
+    <div class="container d-flex flex-wrap">
+      <a href="/" class="nav nav-item nav-link text-muted">
         © 2022 Trade Audit
       </a>
 
