--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -20,7 +20,7 @@
   </div>
   
   <footer class="py-2 bg-light border-top">
-    <div class="container d-flex flex-wrap">
+    <div class="container d-flex flex-wrap me-auto">
       <a href="/" class="nav nav-item nav-link text-muted">
         © 2022 Trade Audit
       </a>
