--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -21,7 +21,7 @@
   
   <footer class="py-2 bg-light border-top">
     <div class="container d-flex flex-wrap me-auto">
-      <a href="/" class="nav nav-item nav-link text-muted">
+      <a href="/" class="nav nav-item nav-link text-muted me-auto">
         © 2022 Trade Audit
       </a>
 
