--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -10,6 +10,7 @@
 <body>
   <nav class="py-2 bg-light border-bottom">
     <div class="container d-flex flex-wrap">
+        <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" width="60" height="60"/>
         <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">Trade Audit</a>
         <img alt="Get it on Google Play" height="60px" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png">
     </div>
