--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -7,7 +7,7 @@
 <!--            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"-->
 <!--            crossorigin="anonymous"></script>-->
 </head>
-<body>
+<body class="d-flex flex-column h-100">
   <header>
     <nav class="py-2 bg-light border-bottom">
         <div class="container d-flex flex-wrap">
