--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -10,7 +10,7 @@
 <body class="d-flex flex-column h-100">
   <header>
     <nav class="py-2 bg-light border-bottom">
-        <div class="container d-flex flex-wrap">
+        <div class="container-xl d-flex flex-wrap">
             <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" width="60" height="60"/>
             <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">Trade Audit</a>
             <img alt="Get it on Google Play" height="60px" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png">
@@ -18,12 +18,12 @@
     </nav>
   </header>
   
-  <main class="container g-5 mt-5 flex-shrink-0">
+  <main class="container-xl g-5 mt-5 flex-shrink-0">
     {{ content }}
   </main>
   
   <footer class="py-2 bg-light border-top footer mt-auto">
-    <div class="container d-flex flex-wrap me-auto">
+    <div class="container-xl d-flex flex-wrap me-auto">
       <a href="/" class="nav nav-item nav-link text-muted me-auto">
         © 2022 Trade Audit
       </a>
