--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
   
-  <main class="container-xl g-5 mt-5 flex-shrink-0">
+  <main class="container-xl g-5 my-5 flex-shrink-0">
     {{ content }}
   </main>
   
