--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -2,7 +2,8 @@
 <html class="h-100" style="font-size: 20px" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ site.title }}</title>
+    <title>{{ page.title }}</title>
+    <meta name="author" content="{{ site.author }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"-->
