--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
     <meta name="author" content="{{ site.author }}">
+    <link rel="shortcut icon" href="/assets/images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"-->
