--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -15,8 +15,10 @@
   <header>
     <nav class="py-2 bg-light border-bottom">
         <div class="container-xl d-flex flex-wrap">
-            <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" width="60" height="60"/>
-            <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">Trade Audit</a>
+            <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
+                <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" width="60" height="60"/>
+                Trade Audit
+            </a>
             <img alt="Get it on Google Play" height="60px" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png">
         </div>
     </nav>
@@ -29,7 +31,7 @@
   <footer class="py-2 bg-light border-top footer mt-auto">
     <div class="container-xl d-flex flex-wrap me-auto">
       <a href="/" class="nav nav-item nav-link text-muted me-auto">
-        © 2022 Trade Audit
+        <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" width="20" height="20"/>
       </a>
 
 <!--    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">-->
