--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -16,7 +16,9 @@
     <nav class="py-2 bg-light border-bottom">
         <div class="container-xl d-flex flex-wrap">
             <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
-                <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" width="60" height="60"/>
+                <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" 
+                     width="60" height="60" title="TradeAudit Mobile App" alt="TradeAudit Mobile App" 
+                />
                 Trade Audit
             </a>
             <img alt="Get it on Google Play" height="60px" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png">
@@ -30,25 +32,17 @@
   
   <footer class="py-2 bg-light border-top footer mt-auto">
     <div class="container-xl d-flex flex-wrap me-auto">
-      <a href="/" class="nav nav-item nav-link text-muted me-auto">
-        <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" width="20" height="20"/>
-      </a>
+        <a href="/" class="nav nav-item nav-link text-muted me-auto">
+            <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom"
+                width="30" height="30" title="TradeAudit Mobile App" alt="TradeAudit Mobile App"/>
+        </a>
 
-<!--    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">-->
-<!--      Hi!-->
-<!--    </a>-->
-
-    <ul class="nav text-end"/>
-      <li class="nav-item"><a href="/terms-of-use" class="nav-link px-2 text-muted">Terms of Use</a></li>
-      <li class="nav-item"><a href="/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>
-      <li class="nav-item"><a href="/cookie-policy" class="nav-link px-2 text-muted">Cookie Policy</a></li>
-    </ul>
-  </div>
-<!--    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">-->
-<!--      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>-->
-<!--      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>-->
-<!--      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>-->
-<!--    </ul>-->
+        <ul class="nav text-end"/>
+          <li class="nav-item"><a href="/terms-of-use" class="nav-link px-2 text-muted">Terms of Use</a></li>
+          <li class="nav-item"><a href="/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>
+          <li class="nav-item"><a href="/cookie-policy" class="nav-link px-2 text-muted">Cookie Policy</a></li>
+        </ul>
+      </div>
   </footer>
 </body>
 </html>
