--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -30,7 +30,7 @@
     {{ content }}
   </main>
   
-  <footer class="py-2 bg-light border-top footer mt-auto">
+  <footer class="bg-light border-top footer mt-auto" style="font-size:smaller">
     <div class="container-xl d-flex flex-wrap me-auto">
         <a href="/" class="nav nav-item nav-link text-muted me-auto">
             <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom"
