--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -11,9 +11,9 @@
 <!--            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"-->
 <!--            crossorigin="anonymous"></script>-->
 </head>
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100 bg-light">
   <header>
-    <nav class="py-2 bg-light border-bottom">
+    <nav class="py-2 border-bottom">
         <div class="container-xl d-flex flex-wrap">
             <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
                 <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" 
@@ -26,11 +26,11 @@
     </nav>
   </header>
   
-  <main class="container-xl g-5 my-5 flex-shrink-0">
+  <main class="container-xl g-5 my-5 flex-shrink-0 bg-body">
     {{ content }}
   </main>
   
-  <footer class="bg-light border-top footer mt-auto" style="font-size:smaller">
+  <footer class="border-top footer mt-auto" style="font-size:smaller">
     <div class="container-xl d-flex flex-wrap me-auto">
         <a href="/" class="nav nav-item nav-link text-muted me-auto">
             <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom"
