--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -26,8 +26,10 @@
     </nav>
   </header>
   
-  <main class="container-xl g-5 my-5 flex-shrink-0 bg-body">
+  <main class="bg-body">
+    <div class="container-xl g-5 my-5 flex-shrink-0">
     {{ content }}
+    </div>
   </main>
   
   <footer class="border-top footer mt-auto" style="font-size:smaller">
