--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -26,7 +26,7 @@
     </nav>
   </header>
   
-  <main class="bg-body">
+  <main class="bg-body" style="flex-grow:1">
     <div class="container-xl g-5 my-5 flex-shrink-0">
     {{ content }}
     </div>
