--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -26,8 +26,8 @@
     </nav>
   </header>
   
-  <main class="bg-body" style="flex-grow:1;display: flex;flex-direction: column;">  
-    <div class="container-xl g-5 my-5 flex-shrink-0">
+  <main class="bg-body" style="flex-grow:1;display:flex;flex-direction:column;">  
+    <div class="container-xl g-5 my-5" style="flex-grow:1;display:flex;flex-direction:column;">
     
         {{ content }}
 
