--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -36,7 +36,7 @@
   
   <footer class="border-top footer mt-auto" style="font-size:smaller">
     <div class="container-xl d-flex flex-wrap me-auto">
-        <a href="/" class="nav nav-item nav-link text-muted me-auto">
+        <a href="/" class="nav nav-item nav-link text-muted me-auto" style="margin-left:0">
             <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom"
                 width="30" height="30" title="TradeAudit Mobile App" alt="TradeAudit Mobile App"/>
         </a>
