--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html class="h-100" style="font-size: 20px" lang="en">
+<html class="h-100" style="font-size: 20px" lang="en" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
@@ -10,6 +10,16 @@
 <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"-->
 <!--            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"-->
 <!--            crossorigin="anonymous"></script>-->
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tradeaudit.app" />
+    <meta property="og:image" content="https://tradeaudit.app/assets/opengraph.png" />
+    <meta property="og:image:width" content="225" />
+    <meta property="og:image:height" content="225" />
+    <meta name=”twitter:title” content=”{{ site.title }}” />
+    <meta name=”twitter:description” content=”{{ site.description }}” />
+    <meta name=”twitter:url” content=”http://tradeaudit.app” />
+    <meta name=”twitter:image” content=”https://tradeaudit.app/assets/twitterimage.png” />
 </head>
 <body class="d-flex flex-column h-100 bg-light">
   <header>
