--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -13,13 +13,13 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tradeaudit.app" />
-    <meta property="og:image" content="https://tradeaudit.app/assets/opengraph.png" />
+    <meta property="og:image" content="https://tradeaudit.app/assets/images/opengraph.png" />
     <meta property="og:image:width" content="225" />
     <meta property="og:image:height" content="225" />
     <meta name=”twitter:title” content=”{{ site.title }}” />
     <meta name=”twitter:description” content=”{{ site.description }}” />
     <meta name=”twitter:url” content=”http://tradeaudit.app” />
-    <meta name=”twitter:image” content=”https://tradeaudit.app/assets/twitterimage.png” />
+    <meta name=”twitter:image” content=”https://tradeaudit.app/assets/images/twitterimage.png” />
 </head>
 <body class="d-flex flex-column h-100 bg-light">
   <header>
