--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -16,7 +16,7 @@
     <meta property="og:image" content="https://tradeaudit.app/assets/images/opengraph.png" />
     <meta property="og:image:width" content="225" />
     <meta property="og:image:height" content="225" />
-    <meta name=”twitter:title” content=”{{ site.title }}” />
+    <meta name=”twitter:title” content=”{{ page.title }}” />
     <meta name=”twitter:description” content=”{{ site.description }}” />
     <meta name=”twitter:url” content=”http://tradeaudit.app” />
     <meta name=”twitter:image” content=”https://tradeaudit.app/assets/images/opengraph.png” />
