--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
     <meta name="author" content="{{ site.author }}">
-    <link rel="shortcut icon" href="/assets/images/favicon.ico">
+    <link rel="shortcut icon" href="https://tradeaudit.app/assets/images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"-->
@@ -16,10 +16,10 @@
     <meta property="og:image" content="https://tradeaudit.app/assets/images/opengraph.png" />
     <meta property="og:image:width" content="225" />
     <meta property="og:image:height" content="225" />
-    <meta name=”twitter:title” content=”{{ page.title }}” />
-    <meta name=”twitter:description” content=”{{ site.description }}” />
-    <meta name=”twitter:url” content=”http://tradeaudit.app” />
-    <meta name=”twitter:image” content=”https://tradeaudit.app/assets/images/opengraph.png” />
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="{{ site.description }}" />
+    <meta name="twitter:url" content="http://tradeaudit.app" />
+    <meta name="twitter:image" content="https://tradeaudit.app/assets/images/opengraph.png" />
 </head>
 <body class="d-flex flex-column h-100 bg-light">
   <header>
