--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -10,14 +10,14 @@
 <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"-->
 <!--            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"-->
 <!--            crossorigin="anonymous"></script>-->
-    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:title" content="{{ page.title | remove: """" }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tradeaudit.app" />
     <meta property="og:image" content="https://tradeaudit.app/assets/images/opengraph.png" />
     <meta property="og:image:width" content="225" />
     <meta property="og:image:height" content="225" />
-    <meta name="twitter:title" content="{{ page.title }}" />
-    <meta name="twitter:description" content="{{ site.description }}" />
+    <meta name="twitter:title" content="{{ page.title | remove: """" }}" />
+    <meta name="twitter:description" content="{{ site.description | remove: """" }}" />
     <meta name="twitter:url" content="http://tradeaudit.app" />
     <meta name="twitter:image" content="https://tradeaudit.app/assets/images/opengraph.png" />
 </head>
