--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -18,7 +18,7 @@
     <meta property="og:image:height" content="225" />
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ site.description }}" />
-    <meta name="twitter:url" content="http://tradeaudit.app" />
+    <meta name="twitter:url" content="https://tradeaudit.app" />
     <meta name="twitter:image" content="https://tradeaudit.app/assets/images/opengraph.png" />
 </head>
 <body class="d-flex flex-column h-100 bg-light">
