--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html class="h-100" style="font-size: 20px" lang="en" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
