--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -28,11 +28,10 @@
         <div class="container-xl d-flex flex-wrap">
             <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
                 <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" 
-                     width="60" height="60" title="TradeAudit Mobile App" alt="TradeAudit Mobile App" 
-                />
+                     width="60" height="60" title="TradeAudit Mobile App" alt="TradeAudit Mobile App">
                 Trade Audit
             </a>
-            <img alt="Get it on Google Play" height="60px" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png">
+            <img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png">
         </div>
     </nav>
   </header>
@@ -49,10 +48,10 @@
     <div class="container-xl d-flex flex-wrap me-auto">
         <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0">
             <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom"
-                width="30" height="30" title="TradeAudit Mobile App" alt="TradeAudit Mobile App"/>
+                width="30" height="30" title="TradeAudit Mobile App" alt="TradeAudit Mobile App">
         </a>
 
-        <ul class="nav text-end"/>
+        <ul class="nav text-end">
           <li class="nav-item"><a href="/terms-of-use" class="nav-link px-2 text-muted">Terms of Use</a></li>
           <li class="nav-item"><a href="/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>
           <li class="nav-item"><a href="/cookie-policy" class="nav-link px-2 text-muted">Cookie Policy</a></li>
