--- a/_includes/appstorelink.html
+++ b/_includes/appstorelink.html
@@ -7,7 +7,7 @@
         See how your favourites stack up on real world performance.
       </p>
       <div class="text-center">
-        <img alt="Get it on Google Play" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" height="60px">
+        <img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" height="60">
       </div>
   </span>
 </div>
