--- a/_includes/appstorelink.html
+++ b/_includes/appstorelink.html
@@ -1,5 +1,5 @@
 <div style="flex-grow:1;display:inline-flex;align-self:stretch;">
-  <span class="lead" style="text-align:center;text-justify:inter-word;margin:auto">
+  <div class="lead" style="text-align:center;text-justify:inter-word;margin:auto">
       <p class="mt-5 fw-bold">
         Browse all of your Twitter follows in the TradeAudit mobile app
       </p>
@@ -9,5 +9,5 @@
       <div class="text-center">
         <img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" height="60">
       </div>
-  </span>
+  </div>
 </div>
