--- a/_includes/tweet.html
+++ b/_includes/tweet.html
@@ -52,7 +52,7 @@
                                                                  class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010"
                                                                  style="">
                                                                 <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw"
-                                                                     style="background-image: url(&quot;https://pbs.twimg.com/profile_images/1590756318691868673/E8zSqfzi_x96.jpg&quot;);"></div>
+                                                                     style="background-image: url('{{ include.twitterProfileUrl }}');"></div>
                                                                 <img alt="" draggable="true"
                                                                      src="{{ include.twitterProfileUrl }}"
                                                                      class="css-9pa8cd"></div>
