--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -31,7 +31,7 @@
                      width="60" height="60" title="TradeAudit Mobile App" alt="TradeAudit Mobile App">
                 Trade Audit
             </a>
-            <img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png">
+            <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
         </div>
     </nav>
   </header>
