--- a/_includes/tweet.html
+++ b/_includes/tweet.html
@@ -132,8 +132,13 @@
                     <div class="css-1dbjc4n">
                         <div dir="auto"
                              class="css-901oao r-1dqbpge r-1qd0xha r-adyw6z r-16dba41 r-135wba7 r-bcqeeo r-bnwqim r-qvutc0"
-                             style="color: rgb(15, 20, 25);" data-testid="tweetText" lang="en"><span
-                                class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{ include.tweetBody }}</span>
+                             style="color: rgb(15, 20, 25);" data-testid="tweetText" lang="en">
+                          <span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">
+                            {{ include.tweetBody }}
+                            {% if include.link1 != null %}
+                            <br><br><a href="{{ include.link1 }}" target="_blank">{{ include.link1 }}</a>
+                            {% endif %}
+                          </span>
                         </div>
                     </div>
                     <div class="css-1dbjc4n r-1awozwy r-18u37iz r-1bymd8e">
