--- a/_includes/tweet.html
+++ b/_includes/tweet.html
@@ -5,6 +5,7 @@
   include.twitterScreenName
   include.tweetBody
   include.tweetTimestamp int64
+  include.link1
 -->
 {% assign tweetDateHuman = include.tweetTimestamp | date: "%l:%M %p · %b %e, %Y"  %}
 <div id="app">
@@ -135,7 +136,7 @@
                              style="color: rgb(15, 20, 25);" data-testid="tweetText" lang="en">
                           <span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">
                             {{ include.tweetBody }}
-                            {% if include.link1 != null %}
+                            {% if include.link1 %}
                             <br><br><a href="{{ include.link1 }}" target="_blank">{{ include.link1 }}</a>
                             {% endif %}
                           </span>
