--- a/_includes/tweet.html
+++ b/_includes/tweet.html
@@ -136,8 +136,8 @@
                              style="color: rgb(15, 20, 25);" data-testid="tweetText" lang="en">
                           <span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">
                             {{ include.tweetBody }}
-                            {% if include.link1 %}
-                            <br><br><a href="{{ include.link1 }}" target="_blank">{{ include.link1 }}</a>
+                            {% if include.link %}
+                            <br><br><a href="{{ include.link }}" target="_blank">{{ include.link }}</a>
                             {% endif %}
                           </span>
                         </div>
