--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -21,13 +21,24 @@
     <meta name="twitter:description" content="{{ site.description }}">
     <meta name="twitter:url" content="https://tradeaudit.app">
     <meta name="twitter:image" content="https://tradeaudit.app/assets/images/opengraph.png">
+    <style>
+    .bg-body { background-color: #f9f7ed !important; }
+    a { color: #1d9bf0; }
+    a:hover { color: #ed2c8a; }   
+    .btn-primary { --bs-btn-bg: #282739; --bs-btn-border-color: #282739; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #ed2c8a; }
+    .bg-light { background-color: #282739 !important; }
+    .link-dark { color: #fff !important; }
+    .link-dark:hover { color: #ed2c8a !important; }
+    .text-muted { color: #c7c6cb !important; }
+    a.text-muted:hover { color: #ed2c8a !important; }
+    </style>
 </head>
 <body class="d-flex flex-column h-100 bg-light">
   <header>
     <nav class="py-2 border-bottom">
         <div class="container-xl d-flex flex-wrap">
             <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
-                <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom" 
+                <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;vertical-align:text-bottom;" 
                      width="60" height="60" title="TradeAudit Mobile App" alt="TradeAudit Mobile App">
                 Trade Audit
             </a>
