--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -22,15 +22,16 @@
     <meta name="twitter:url" content="https://tradeaudit.app">
     <meta name="twitter:image" content="https://tradeaudit.app/assets/images/opengraph.png">
     <style>
-    .bg-body { background-color: #f9f7ed !important; }
-    a { color: #1d9bf0; }
-    a:hover { color: #ed2c8a; }   
-    .btn-primary { --bs-btn-bg: #282739; --bs-btn-border-color: #282739; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #ed2c8a; }
-    .bg-light { background-color: #282739 !important; }
-    .link-dark { color: #fff !important; }
-    .link-dark:hover { color: #ed2c8a !important; }
-    .text-muted { color: #c7c6cb !important; }
-    a.text-muted:hover { color: #ed2c8a !important; }
+        .bg-body { background-color: #f9f7ed !important; }
+        a { color: #1d9bf0; }
+        a:hover { color: #ed2c8a; }   
+        .btn-primary { --bs-btn-bg: #282739; --bs-btn-border-color: #282739; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #ed2c8a; }
+        .bg-light { background-color: #282739 !important; }
+        .link-dark { color: #fff !important; }
+        .link-dark:hover { color: #ed2c8a !important; }
+        .text-muted { color: #c7c6cb !important; }
+        a.text-muted:hover { color: #ed2c8a !important; }
+        .nav { --bs-nav-link-padding-y: 0.1rem; }
     </style>
 </head>
 <body class="d-flex flex-column h-100 bg-light">
@@ -57,9 +58,8 @@
   
   <footer class="border-top footer mt-auto" style="font-size:smaller">
     <div class="container-xl d-flex flex-wrap me-auto">
-        <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0">
-            <img src="https://tradeaudit.app/assets/query_stats_FILL0_wght400_GRAD0_opsz48.svg" class="align-bottom"
-                width="30" height="30" title="TradeAudit Mobile App" alt="TradeAudit Mobile App">
+        <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
+            <img src="https://tradeaudit.app/assets/images/favicon.ico" width="32" height="32" title="TradeAudit Mobile App" alt="TradeAudit Mobile App">
         </a>
 
         <ul class="nav text-end">
