--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -25,7 +25,7 @@
         .bg-body { background-color: #f9f7ed !important; }
         a { color: #1d9bf0; }
         a:hover { color: #ed2c8a; }   
-        .btn-primary { --bs-btn-bg: #282739; --bs-btn-border-color: #282739; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #ed2c8a; }
+        .btn-primary { --bs-btn-bg: #282739; --bs-btn-border-color: #6c757d; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #6c757d; }
         .bg-light { background-color: #282739 !important; }
         .link-dark { color: #fff !important; }
         .link-dark:hover { color: #ed2c8a !important; }
