--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-100" style="font-size: 20px" lang="en" prefix="og: https://ogp.me/ns#">
+<html class="h-100" lang="en" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
@@ -34,7 +34,7 @@
         .nav { --bs-nav-link-padding-y: 0.1rem; }
     </style>
 </head>
-<body class="d-flex flex-column h-100 bg-light">
+<body class="d-flex flex-column h-100 bg-light" style="font-family: 'Gill Sans', 'Helvetica', sans-serif;">
   <header>
     <nav class="py-2 border-bottom">
         <div class="container-xl d-flex flex-wrap">
