--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@
     <nav class="py-2 border-bottom">
         <div class="container-xl d-flex flex-wrap">
             <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
-                <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;vertical-align:text-bottom;" 
+                <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;" 
                      width="60" height="60" title="Trade Audit Mobile App" alt="Trade Audit Mobile App">
-                Trade Audit
+                <span style="font-size: 36pt !important;vertical-align: middle;">Trade Audit</span>
             </a>
             <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
         </div>
@@ -56,7 +56,7 @@
     </div>
   </main>
   
-  <footer class="border-top footer mt-auto" style="font-size:smaller">
+  <footer class="border-top footer mt-auto" style="font-size:16pt">
     <div class="container-xl d-flex flex-wrap me-auto">
         <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
             <img src="https://tradeaudit.app/assets/images/favicon.ico" width="32" height="32" title="Trade Audit Mobile App" alt="Trade Audit Mobile App">
