--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -2,7 +2,7 @@
 <div class="mt-5">
     <h2 class="display-5 fw-bold text-center">Social Media Integrations</h2>
 
-    <button type="button" title="YouTube integration" data-bs-toggle="tooltip" data-bs-placement="top" class="btn btn-lg {% if selected = "youtube" %}active{% endif %}">
+    <button type="button" title="YouTube integration" data-bs-toggle="tooltip" data-bs-placement="top" class="btn btn-lg {% if selected == "youtube" %}active{% endif %}">
         <img src="/assets/influencer-youtube.svg" style="width:120px"><br>
         YouTube<br>
         <ul>
@@ -10,14 +10,14 @@
             <li>Transcripts</li>
         </ul>
     </button>
-    <button type="button" title="X integration" data-bs-toggle="tooltip" data-bs-placement="top" class="btn btn-lg {% if selected = "x" %}active{% endif %}">
+    <button type="button" title="X integration" data-bs-toggle="tooltip" data-bs-placement="top" class="btn btn-lg {% if selected == "x" %}active{% endif %}">
         <img src="/assets/influencer-x.svg" style="margin-left:4px;width:120px"><br>
         X / Twitter
         <ul>
             <li>$cashtags</li>
         </ul>
     </button>
-    <button type="button" title="Web integration" data-bs-toggle="tooltip" data-bs-placement="top" class="btn btn-lg {% if selected = "web" %}active{% endif %}">
+    <button type="button" title="Web integration" data-bs-toggle="tooltip" data-bs-placement="top" class="btn btn-lg {% if selected == "web" %}active{% endif %}">
         <img src="/assets/influencer-web.svg" style="width:120px"><br>
         Any Webpage
         <ul>
