--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -5,13 +5,13 @@
 <div class="mt-5 text-center">
     <h2 class="display-5 fw-bold ">Social Media Integrations</h2>
 
-    <table>
+    <table style="border-collapse: separate;">
         <tr>
             <td 
-                style="width: 200px;border-radius: 25px;border: 2px solid #282739;"
-                class="btn btn-lg {{ active_youtube }}"
+                style="width:200px;border-radius:25px;border:2px solid #282739;vertical-align:top;"
+                class="{{ active_youtube }}"
             >
-                <img src="/assets/influencer-youtube.svg" style="width:160px" alt="YouTube"><br>
+                <div style="height:160px"><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
                 YouTube<br>
                 <ul>
                     <li>Search</li>
@@ -19,20 +19,20 @@
                 </ul>
             </td>
             <td
-                style="width: 200px;border-radius: 25px;border: 2px solid #282739;"
-                class="btn btn-lg {{ active_x }}"
+                style="width:200px;border-radius:25px;border:2px solid #282739;vertical-align:top;"
+                class="{{ active_x }}"
             >
-                <img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px" alt="X"><br>
+                <div style="height:160px"><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
                 X / Twitter
                 <ul>
                     <li>$cashtags</li>
                 </ul>
             </td>
             <td
-                style="width: 200px;border-radius: 25px;border: 2px solid #282739;"
-                class="btn btn-lg {{ active_web }}"
+                style="width:200px;border-radius:25px;border:2px solid #282739;vertical-align:top;"
+                class="{{ active_web }}"
             >
-                <img src="/assets/influencer-web.svg" style="width:180px" alt="Webpages"><br>
+                <div style="height:160px"><img src="/assets/influencer-web.svg" style="width:180px;" alt="Webpages"></div>
                 Import from any Webpage
             </td>
         </tr>
